2000-01-12  Sancho Lerena <slerena@artica.es>

	* DB.pm: Added generic functions db_delete, db_update and db_insert.

	* util/pandora_db.pl: Optimized maintance script. Solves some detected
	performance issues.

	* pandora_server_upgrade: Script to easy upgrade your running 
	Pandora FMS servers from code or Update Manager.

2008-12-27  Sancho Lerena <slerena@artica.es>

	* bin/pandora_recon: Added a timeout to pandora_getparent(). The call
	  to traceroute() would hang despite query_timeout. Merged from trunk
	  repository.         

2008-12-15  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Check for module existence before trying
	  to export data (merged from trunk).

2008-12-03  Sancho Lerena <slerena@artica.es>

        * mysql_plugin.sh: Updated MySQL plugin.  

2008-11-26  Sancho Lerena <slerena@artica.es>
	
	* util/plugin/mysql_plugin.sh: New Mysql plugin for Plugin server.


2008-11-11  Sancho Lerena <slerena@artica.es>

	* conf/pandora_server.conf: Added mta_user parameter who defines
	mail address used for alerts.

	* pandora_ctl: General control script to start/stop Pandora FMS
	daemons.

	* util/SLES10/*: Alternative start/stop daemons for SUSE and
	other systems that don't work fine with standard scripts.


2008-11-08  Sancho Lerena <slerena@gmail.com>

	* Config.pm: Fixed bug parsing config options with more
	than 2 digits. Thanks to Glen Eustace.

2008-11-07  Sancho Lerena <slerena@gmail.com>

	* bin/pandora_server: Fixed an important problem detected
	in Keepalive module, present since revision #678.

2008-10-30  Sancho Lerena <slerena@gmail.com>

	* lib/PandoraFMS/DB.pm:  Some people reports problems with 
	server stop detection. This could help, because has optimized
	way to detect servers, but is not a bugfix because I cannot 
	reproduce the problem.

2008-10-29  Manuel Arostegui <marostegui@artica.es>
	
	* pandora_server/lib/PandoraFMS/Config.pm: Updated build number.

2008-10-27  Esteban Sanchez  <esteban@artica.es>
